Visual de Mas Vendidos y otros ajustes

--- a/public/css/google-font.css
+++ b/public/css/google-font.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "San Francisco";
+  font-family: "San Franciscoa";
   font-style: normal;
   font-weight: 200;
   src: url(fonts/sanfranciscodisplay-ultralight-webfont.woff2)
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: "San Francisco";
+  font-family: "San Franciscoa";
   font-style: normal;
   font-weight: 300;
   src: url(fonts/sanfranciscodisplay-thin-webfont.woff2)
